--- a/DB.html
+++ b/DB.html
@@ -4,150 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>レコード管理画面</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 20px;
-            color: #222;
-        }
-        .container {
-            max-width: 1400px;
-            margin: 0 auto;
-            background: rgba(255, 255, 255, 0.98);
-            border-radius: 25px;
-            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.15);
-            overflow: hidden;
-        }
-        .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 30px;
-            text-align: center;
-        }
-        .header h1 { font-size: 2rem; margin-bottom: 8px; }
-        .header p { opacity: 0.95; }
-
-        .stats { padding: 20px; background: #e3f2fd; border-radius: 10px; margin: 20px; }
-        .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 20px; }
-        .stat-card { background: white; padding: 15px; border-radius: 10px; text-align: center; }
-        .stat-number { font-size: 1.6rem; font-weight: 700; color: #4facfe; }
-        .stat-label { color: #6c757d; font-size: 0.9rem; }
-
-        .controls {
-            padding: 18px;
-            background: #f8f9fa;
-            display: flex;
-            gap: 12px;
-            flex-wrap: wrap;
-            align-items: center;
-            border-top: 1px solid rgba(0,0,0,0.02);
-            border-bottom: 1px solid rgba(0,0,0,0.02);
-        }
-        .search-box {
-            flex: 1;
-            min-width: 250px;
-            padding: 10px 12px;
-            border: 2px solid #e9ecef;
-            border-radius: 10px;
-            font-size: 15px;
-            background: white;
-        }
-        .category-filter {
-            padding: 8px 10px;
-            border: 2px solid #e9ecef;
-            border-radius: 8px;
-            background: white;
-            min-width: 180px;
-        }
-        .btn {
-            padding: 10px 18px;
-            background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
-            color: white;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            font-weight: 600;
-            transition: transform .18s ease, box-shadow .18s ease;
-        }
-        .btn.secondary {
-            background: linear-gradient(135deg, #6c757d 0%, #495057 100%);
-        }
-        .btn:hover { transform: translateY(-3px); box-shadow: 0 8px 18px rgba(79,172,254,0.15); }
-        .btn.danger { background: linear-gradient(135deg,#f44336,#d32f2f); }
-
-        .table-container { padding: 20px; overflow-x: auto; }
-        table { width: 100%; border-collapse: collapse; background: white; }
-        #documentsTable { display: none; /* JSで制御 */ }
-        th, td { padding: 12px; text-align: left; border-bottom: 1px solid #e9ecef; vertical-align: top; }
-        th { background: #f8f9fa; font-weight: 600; color: #495057; position: sticky; top: 0; z-index: 1; }
-        tr:hover { background: #f1f3f5; }
-
-        .content-preview {
-            max-width: 420px;
-            max-height: 120px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: pre-wrap;
-            word-break: break-word;
-            font-size: 0.95rem;
-            color: #333;
-        }
-        .metadata { font-size: 0.85rem; color: #6c757d; }
-
-        .action-buttons { display:flex; gap:6px; }
-        .action-btn {
-            padding: 6px 10px;
-            border-radius: 6px;
-            border: none;
-            cursor: pointer;
-            font-size: 0.86rem;
-        }
-        .action-btn.edit { background:#28a745; color:white; }
-        .action-btn.delete { background:#dc3545; color:white; }
-        .action-btn:hover { opacity:0.9; transform: translateY(-1px); }
-
-        /* モーダル */
-        .modal { display:none; position: fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background: rgba(0,0,0,0.5); }
-        .modal.show { display:flex; align-items:center; justify-content:center; }
-        .modal-content {
-            background:white; padding:28px; border-radius:12px; width: 92%; max-width:760px; max-height:86vh; overflow:auto;
-        }
-        .form-group { margin-bottom:16px; }
-        .form-group label { display:block; margin-bottom:6px; font-weight:600; }
-        .form-group input, .form-group textarea { width:100%; padding:10px; border:1px solid #dee2e6; border-radius:8px; font-family:inherit; }
-        .form-group textarea { min-height:180px; resize:vertical; }
-
-        .loading { text-align:center; padding:40px; color:#6c757d; }
-
-        /* sr-only 用 */
-        .sr-only {
-            position: absolute !important;
-            width: 1px !important;
-            height: 1px !important;
-            padding: 0 !important;
-            margin: -1px !important;
-            overflow: hidden !important;
-            clip: rect(0 0 0 0) !important;
-            white-space: nowrap !important;
-            border: 0 !important;
-        }
-
-        /* レスポンシブ */
-        @media (max-width: 920px) {
-            .controls { gap:10px; padding:14px; }
-            .content-preview { max-width: 260px; }
-        }
-        @media (max-width: 520px) {
-            .controls { flex-direction: column; align-items: stretch; }
-            .category-filter { width: 100%; }
-            .search-box { width: 100%; }
-            .btn { width: 100%; }
-            th, td { font-size: 0.92rem; padding: 10px; }
-        }
-    </style>
+     <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
     <div class="container">
