--- a/admin.html
+++ b/admin.html
@@ -4,111 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学生支援チャットボット【管理者画面】</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; padding: 20px; overflow-x: hidden; }
-        .container { max-width: 1400px; margin: 0 auto; background: rgba(255, 255, 255, 0.98); border-radius: 25px; box-shadow: 0 30px 60px rgba(0, 0, 0, 0.15); overflow: hidden; }
-        .header { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 40px; text-align: center; position: relative; overflow: hidden; }
-        .header h1 { font-size: 2.5rem; margin-bottom: 15px; text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); position: relative; z-index: 1; }
-        .header p { font-size: 1.1rem; opacity: 0.9; position: relative; z-index: 1; }
-        .main-content { display: grid; grid-template-columns: 1fr 400px; gap: 30px; padding: 30px; min-height: 600px; }
-        .chat-container { display: flex; flex-direction: column; background: white; border-radius: 20px; box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1); overflow: hidden; position: relative; }
-        .chat-header { background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); color: white; padding: 20px; text-align: center; font-weight: 600; font-size: 1.1rem; }
-        .chat-messages { flex: 1; padding: 20px; overflow-y: auto; max-height: 500px; display: flex; flex-direction: column; gap: 15px; }
-        .message { max-width: 80%; padding: 15px 20px; border-radius: 20px; position: relative; animation: slideIn 0.3s ease-out; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); }
-        @keyframes slideIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-        .message.user { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; align-self: flex-end; margin-left: auto; }
-        .message.bot { background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); color: #333; align-self: flex-start; border-left: 4px solid #4facfe; }
-        .message-content { line-height: 1.6; white-space: pre-wrap; word-wrap: break-word; }
-        .message-content a { color: #007bff; text-decoration: underline; }
-        .message-content a:hover { color: #0056b3; }
-        .message-time { font-size: 0.8rem; opacity: 0.7; margin-top: 8px; }
-        .chat-input-container { padding: 20px; background: #f8f9fa; border-top: 1px solid #e9ecef; }
-        .chat-input-box { display: flex; gap: 10px; align-items: flex-end; }
-        .chat-input { flex: 1; padding: 15px; border: 2px solid #e9ecef; border-radius: 25px; font-size: 16px; outline: none; transition: all 0.3s ease; resize: none; min-height: 50px; max-height: 120px; }
-        .chat-input:focus { border-color: #4facfe; box-shadow: 0 0 0 3px rgba(79, 172, 254, 0.1); }
-        .send-btn { padding: 15px 25px; background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); color: white; border: none; border-radius: 25px; cursor: pointer; font-weight: 600; transition: all 0.2s ease; display:flex; gap:8px; align-items:center; }
-        .send-btn:hover { transform: translateY(-2px); box-shadow: 0 8px 20px rgba(79, 172, 254, 0.3); }
-        .send-btn:disabled { opacity: 0.6; cursor: not-allowed; transform: none; }
-        .right-panel { display: flex; flex-direction: column; gap: 20px; }
-        .panel-section { background: white; padding: 25px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); }
-        .section-title { font-size: 1.3rem; font-weight: 700; margin-bottom: 20px; color: #333; border-bottom: 3px solid #4facfe; padding-bottom: 10px; }
-        .status-indicator { display: inline-block; width: 10px; height: 10px; border-radius: 50%; margin-right: 10px; animation: pulse 2s infinite; }
-        @keyframes pulse { 0% { box-shadow: 0 0 0 0 rgba(79, 172, 254, 0.7); } 70% { box-shadow: 0 0 0 10px rgba(79, 172, 254, 0); } 100% { box-shadow: 0 0 0 0 rgba(79, 172, 254, 0); } }
-        .status-connected { background-color: #28a745; }
-        .status-disconnected { background-color: #dc3545; }
-        .margin-top-10 { margin-top: 10px; }
-        .db-info { font-size: 0.9rem; color: #666; margin-top: 10px; }
-        .model-info { background: #e3f2fd; padding: 15px; border-radius: 8px; margin-top: 10px; font-size: 0.9rem; }
-        .model-select, .collection-select, .embedding-model-select { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 5px; margin-top: 10px; }
-        .document-upload { margin-top: 15px; }
-        #fileInput { display: none; }
-        .upload-btn { background: #28a745; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; margin-right: 10px; margin-bottom: 10px; }
-        .upload-btn:hover { background: #218838; }
-        .upload-btn.danger { background: #dc3545; }
-        .upload-btn.danger:hover { background: #c82333; }
-        .document-list { max-height: 150px; overflow-y: auto; margin-top: 10px; }
-        .document-item { padding: 8px 12px; background: #f8f9fa; margin: 5px 0; border-radius: 5px; font-size: 0.9rem; display: flex; justify-content: space-between; align-items: center; }
-        .document-item:hover { background: #e9ecef; }
-        .collection-input { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 5px; margin-top: 10px; }
-        .topk-select { width: 60px; padding: 2px; }
-        .db-controls { display: flex; gap: 10px; margin-top: 10px; }
-        .small-btn { padding: 5px 10px; font-size: 0.8rem; border: none; border-radius: 3px; cursor: pointer; }
-        .small-btn.primary { background: #007bff; color: white; }
-        .small-btn.success { background: #28a745; color: white; }
-        .small-btn.danger { background: #dc3545; color: white; }
-        .feedback-container { margin-top: 12px; padding-top: 8px; border-top: 1px solid #ddd; }
-        .feedback-btn { background: none; border: 1px solid #ccc; border-radius: 15px; padding: 3px 8px; margin-left: 8px; cursor: pointer; transition: all 0.2s ease; }
-        .feedback-btn:hover { background: #e9ecef; transform: scale(1.1); }
-        .scrape-input { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 5px; margin-top: 10px; }
-        .scrape-btn { margin-top: 10px; padding: 8px 15px; background: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s; }
-        .scrape-btn:hover { background: #0056b3; }
-        .scrape-btn:disabled { background-color: #6c757d; cursor: not-allowed; }
-        .website-example { padding: 8px 12px; background: #f0f8ff; border-radius: 5px; margin-bottom: 8px; cursor: pointer; transition: background 0.2s; font-size: 0.85rem; border-left: 3px solid #007bff; }
-        .website-example:hover { background: #e0f0ff; }
-        .admin-tool-btn { display: block; width: 100%; padding: 12px; background: linear-gradient(135deg, #6c757d 0%, #343a40 100%); color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: 700; }
-        .admin-tool-btn:hover { transform: translateY(-2px); box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); }
-        .sync-status { font-size: 0.85rem; color: #28a745; margin-top: 5px; font-style: italic; }
-        .sync-status.error { color: #dc3545; }
-        .setting-item { margin-bottom: 15px; padding: 10px; border: 1px solid #e9ecef; border-radius: 8px; background: #f8f9fa; }
-        .setting-item.active { border-color: #28a745; background: #e8f5e8; }
-        .auto-sync-indicator { display: inline-block; width: 8px; height: 8px; border-radius: 50%; background: #28a745; margin-left: 10px; animation: blink 1s infinite; }
-        @keyframes blink { 0%, 50% { opacity: 1; } 51%, 100% { opacity: 0.3; } }
-        .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: flex; justify-content: center; align-items: center; z-index: 1000; opacity: 0; visibility: hidden; transition: all 0.2s; }
-        .modal-overlay.visible { opacity: 1; visibility: visible; }
-        .modal-content { background: white; padding: 30px; border-radius: 15px; box-shadow: 0 10px 40px rgba(0,0,0,0.2); text-align: center; max-width: 400px; transform: scale(0.9); transition: transform 0.2s; }
-        .modal-overlay.visible .modal-content { transform: scale(1); }
-        .modal-message { font-size: 1.1rem; margin-bottom: 25px; color: #333; }
-        .modal-buttons { display: flex; gap: 15px; justify-content: center; }
-        .modal-btn { padding: 10px 25px; border: none; border-radius: 8px; cursor: pointer; font-weight: 600; transition: all 0.2s; }
-        .modal-btn.confirm { background: #dc3545; color: white; }
-        .modal-btn.confirm:hover { background: #c82333; }
-        .modal-btn.cancel { background: #e9ecef; color: #333; }
-        .modal-btn.cancel:hover { background: #ced4da; }
+     <link rel="stylesheet" href="style.css">
 
-        @media (max-width: 820px) {
-            body { padding: 10px; }
-            .container { border-radius: 15px; }
-            .main-content { grid-template-columns: 1fr; padding: 15px; gap: 20px; }
-            .header { padding: 25px; }
-            .header h1 { font-size: 2rem; }
-            .header p { font-size: 1rem; }
-            .chat-messages { max-height: 45vh; }
-            .panel-section { padding: 20px; }
-            .section-title { font-size: 1.2rem; }
-        }
-        @media (max-width: 480px) {
-            body { padding: 5px; }
-            .main-content { padding: 10px; }
-            .header { padding: 20px; }
-            .header h1 { font-size: 1.6rem; }
-            .header p { font-size: 0.9rem; }
-            .chat-input-container { padding: 15px; }
-            .chat-input-box { flex-direction: column; align-items: stretch; }
-            .send-btn { justify-content: center; padding: 12px; }
-            .panel-section { padding: 15px; }
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -223,7 +120,8 @@
                 <div class="panel-section">
                     <h3 class="section-title">📄 文書管理</h3>
                     <div class="document-upload">
-                        <input type="file" id="fileInput" accept=".txt,.md,.pdf,.docx" multiple>
+                        <label for="fileInput" style="font-size:0.9rem; color:#333; margin-bottom:4px; display:block;">文書ファイルを選択</label>
+                        <input type="file" id="fileInput" accept=".txt,.md,.pdf,.docx" multiple title="アップロードする文書ファイルを選択してください">
                         <button class="upload-btn" onclick="document.getElementById('fileInput').click()">📁 文書アップロード</button>
                         <p style="font-size: 0.8rem; color: #666; margin-top: 5px;">
                             ※メタデータ登録のため、ファイル名は「<b>カテゴリ名</b>_ファイル名.txt」の形式にしてください。
@@ -270,14 +168,17 @@
         let backendConnected = false;
         let settingsSocket = null;
 
-        // openDocumentManager を定義（固定の公開 URL を直接開く）
+        // openDocumentManager を定義（実行ホストに応じて動的に DB.html を開く）
         function openDocumentManager() {
-            const url = 'https://ishikawa-chatbot.onrender.com/DB.html';
+            // 実行中のオリジン（プロトコル+ホスト+ポート）を使う方法
+            const url = `${window.location.origin}/DB.html`;
+            // あるいは、ルートからの絶対パスで良ければ: const url = '/DB.html';
             window.open(url, '_blank');
         }
         // onclick 属性から確実に参照できるようグローバルに割り当て
         window.openDocumentManager = openDocumentManager;
 
+        /* 以下既存の WebSocket 等の処理は変更無し */
         function connectSettingsWebSocket() {
             try {
                 const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
