--- a/admin.html
+++ b/admin.html
@@ -161,29 +161,48 @@
     /* --- フォーム要素 --- */
     .model-info { background: #e3f2fd; padding: 16px; /* 統一 */ border-radius: 8px; /* 統一 */ margin-top: 8px; /* 統一 */ font-size: 0.9rem; }
     .model-select, .collection-select, .embedding-model-select, .collection-input, .scrape-input {
-        width: 100%;
-        padding: 8px 12px; /* 統一 */
-        border: 1px solid #ddd;
-        border-radius: 4px; /* 統一 */
-        margin-top: 8px; /* 統一 */
-    }
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-top: 10px;
+}
     .topk-select { width: 64px; /* 統一 */ padding: 4px; /* 統一 */ }
-    .document-upload { margin-top: 16px; /* 統一 */ }
+    .document-upload { margin-top: 15px; /* 統一 */ }
     #fileInput { display: none; }
-    .upload-btn {
-        background: #28a745; color: white; border: none; padding: 8px 16px; /* 統一 */
-        border-radius: 4px; /* 統一 */ cursor: pointer; margin-right: 8px; /* 統一 */ margin-bottom: 8px; /* 統一 */
-    }
-    .upload-btn:hover { background: #218838; }
+  .upload-btn {
+    background: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.upload-btn:hover {
+    background: #218838;
+}
     .upload-btn.danger { background: #dc3545; }
     .upload-btn.danger:hover { background: #c82333; }
-    .document-list { max-height: 150px; overflow-y: auto; margin-top: 8px; /* 統一 */ }
-    .document-item {
-        padding: 8px 12px; /* 統一 */
-        background: #f8f9fa; margin: 4px 0; /* 統一 */ border-radius: 4px; /* 統一 */ font-size: 0.9rem;
-        display: flex; justify-content: space-between; align-items: center;
-    }
-    .document-item:hover { background: #e9ecef; }
+   .document-list {
+    max-height: 150px;
+    overflow-y: auto;
+    margin-top: 10px;
+}
+.document-item {
+    padding: 8px 12px;
+    background: #f8f9fa;
+    margin: 5px 0;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.document-item:hover {
+    background: #e9ecef;
+}
     .db-controls { display: flex; gap: 8px; /* 統一 */ margin-top: 8px; /* 統一 */ }
     .small-btn { padding: 4px 8px; /* 統一 */ font-size: 0.8rem; border: none; border-radius: 4px; /* 統一 */ cursor: pointer; }
     .small-btn.primary { background: #007bff; color: white; }
@@ -194,9 +213,23 @@
     .feedback-container { margin-top: 12px; padding-top: 8px; /* 統一 */ border-top: 1px solid #ddd; }
     .feedback-btn { background: none; border: 1px solid #ccc; border-radius: 16px; /* 統一 */ padding: 4px 8px; /* 統一 */ margin-left: 8px; /* 統一 */ cursor: pointer; transition: all 0.2s ease; }
     .feedback-btn:hover { background: #e9ecef; transform: scale(1.1); }
-    .scrape-btn { margin-top: 8px; /* 統一 */ padding: 8px 16px; /* 統一 */ background: #007bff; color: white; border: none; border-radius: 4px; /* 統一 */ cursor: pointer; transition: background-color 0.3s; }
-    .scrape-btn:hover { background: #0056b3; }
-    .scrape-btn:disabled { background-color: #6c757d; cursor: not-allowed; }
+   .scrape-btn {
+    margin-top: 10px;
+    padding: 8px 15px;
+    background: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+.scrape-btn:hover {
+    background: #0056b3;
+}
+.scrape-btn:disabled {
+    background-color: #6c757d;
+    cursor: not-allowed;
+}
     .website-example { padding: 8px 12px; /* 統一 */ background: #f0f8ff; border-radius: 4px; /* 統一 */ margin-bottom: 8px; /* 統一 */ cursor: pointer; transition: background 0.2s; font-size: 0.85rem; border-left: 3px solid #007bff; }
     .website-example:hover { background: #e0f0ff; }
     .admin-tool-btn { display: block; width: 100%; padding: 12px; background: linear-gradient(135deg, #6c757d 0%, #343a40 100%); color: white; border: none; border-radius: 8px; /* 統一 */ cursor: pointer; font-weight: 700; }
