CSS/* width: 100%; を指定しない */指定せず削除

--- a/admin.html
+++ b/admin.html
@@ -160,8 +160,8 @@
 
     /* --- フォーム要素 --- */
     .model-info { background: #e3f2fd; padding: 16px; /* 統一 */ border-radius: 8px; /* 統一 */ margin-top: 8px; /* 統一 */ font-size: 0.9rem; }
-    .model-select, .collection-select, .embedding-model-select, .collection-input, .scrape-input {
-    width: 100%;
+.scrape-input {
+    /* width: 100%; を指定しない */
     padding: 8px;
     border: 1px solid #ddd;
     border-radius: 5px;
