--- a/client.html
+++ b/client.html
@@ -71,6 +71,11 @@
         .success-message { color: #28a745; font-weight: 600; margin-top: 10px; display: none; }
         .error-message { color: #dc3545; font-weight: 600; margin-top: 10px; display: none; }
 
+        .warning-text {
+            color: red;
+            font-weight: bold;
+        }
+
         @media (max-width: 480px) {
             body { padding: 5px; }
             .container { height: calc(100vh - 10px); }
@@ -85,33 +90,33 @@
             .comment-btn { position: static; margin-top: 15px; }
             /* 既存のCSSルールセットの下に追加 */
 
-.rating-container {
-    margin-bottom: 15px;
-    text-align: center;
-}
-.rating-container p {
-    margin-bottom: 10px;
-    font-size: 0.9rem;
-    color: #555;
-}
-.rating-btn {
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    padding: 8px 15px;
-    margin: 0 5px;
-    cursor: pointer;
-    transition: all 0.2s ease;
-}
-.rating-btn:hover {
-    background-color: #e0e0e0;
-}
-.rating-btn.selected {
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    color: white;
-    border-color: #667eea;
-    font-weight: bold;
-}
+        .rating-container {
+            margin-bottom: 15px;
+            text-align: center;
+        }
+        .rating-container p {
+            margin-bottom: 10px;
+            font-size: 0.9rem;
+            color: #555;
+        }
+        .rating-btn {
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            border-radius: 20px;
+            padding: 8px 15px;
+            margin: 0 5px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+        .rating-btn:hover {
+            background-color: #e0e0e0;
+        }
+        .rating-btn.selected {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border-color: #667eea;
+            font-weight: bold;
+        }
         }
     </style>
 </head>
@@ -136,8 +141,16 @@
                         - 新しいサークルを作るには？<br>
                         - 休学・復学・退学の手続きをしたいときは？<br>
                         様々な質問にお答えします！
-                        <span style="color:red; font-weight:bold;">
+                        <span class="warning-text">
                      ※氏名・住所・学籍番号などの個人情報は入力しないでください。
+
+                     チャットの会話履歴について
+
+                   利用目的: ユーザの質問に対し、より文脈に沿った適切な回答を生成するために、一時的に会話の履歴を利用します。
+
+                   保存期間: 会話の履歴は、ユーザのブラウザセッションが終了するか、サーバーが再起動されるまでの期間のみ保持されます。これらは永続的に保存されるものではありません。
+
+                   情報の取り扱い: 取得した会話履歴は、上記の目的以外で利用することはありません。
                         </span>
                     </div>
                     <div class="message-time">システム起動時刻</div>
