チャットメッセージ内容の変更

--- a/client.html
+++ b/client.html
@@ -143,14 +143,7 @@
                         様々な質問にお答えします！
                         <span class="warning-text">
                      ※氏名・住所・学籍番号などの個人情報は入力しないでください。
-
-                     チャットの会話履歴について
-
-                   利用目的: ユーザの質問に対し、より文脈に沿った適切な回答を生成するために、一時的に会話の履歴を利用します。
-
-                   保存期間: 会話の履歴は、ユーザのブラウザセッションが終了するか、サーバーが再起動されるまでの期間のみ保持されます。これらは永続的に保存されるものではありません。
-
-                   情報の取り扱い: 取得した会話履歴は、上記の目的以外で利用することはありません。
+                        重要な決定をする前に、必ず公式情報を確認してください。
                         </span>
                     </div>
                     <div class="message-time">システム起動時刻</div>
