名称をAI chatbot systemに変更

--- a/admin.html
+++ b/admin.html
@@ -337,7 +337,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🔍 学生支援チャットボット【管理者】</h1>
+            <h1>🔍 AI chatbot system【管理者】</h1>
             <p>学生支援のためのAIチャットボット (Gemini API版)</p>
         </div>
 
