--- a/client.html
+++ b/client.html
@@ -190,7 +190,7 @@
                 <div class="sync-dot disconnected" id="syncDot"></div>
                 <span id="syncText">設定同期準備中...</span>
             </div>
-            <h1>🔍 学生支援チャットボット</h1>
+            <h1>🔍 AI chatbot system</h1>
             <p class="subtitle">学生生活に関する様々な質問にお答えします！</p>
             
             <div class="theme-selector">
