コードの置き換え

--- a/DB.html
+++ b/DB.html
@@ -234,7 +234,7 @@
                 </div>
             </div>
 
-            <div class="controls">
+<div class="controls">
                 <input type="text" id="searchInput" class="search-box" placeholder="検索（コンテンツ、カテゴリー、ソース）">
                 <label for="categoryFilter" class="sr-only">カテゴリーで絞り込む</label>
                 <select id="categoryFilter" class="category-filter" aria-label="カテゴリーで絞り込む">
@@ -244,7 +244,7 @@
                 <button class="btn secondary" onclick="window.location.href='/admin'">← 管理画面に戻る</button>
             </div>
 
-<div class="table-container">
+            <div class="table-container">
                 <div id="loadingIndicator" class="loading">データを読み込み中...</div>
                 <table id="documentsTable" aria-live="polite">
                     <thead>
@@ -265,11 +265,8 @@
                 <div id="paginationControls" class="pagination-controls">
                     </div>
                 
-            </div> </div> <div id="qa-view" class="tab-content">
-                
->
-
-        <div id="qa-view" class="tab-content">
+            </div>
+        </div> <div id="qa-view" class="tab-content">
             <div class="stats">
                 <div class="stats-grid">
                     <div class="stat-card">
@@ -311,10 +308,7 @@
                     <tbody id="qaBody"></tbody>
                 </table>
             </div>
-        </div>
-    </div>
-
-    <div id="editModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="editModalTitle">
+        </div> </div> <div id="editModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="editModalTitle">
         <div class="modal-content">
             <h2 id="editModalTitle">レコード編集 (Document)</h2>
             <div class="form-group">
