admin.htmlの埋め込み表記変更

--- a/static/admin.html
+++ b/static/admin.html
@@ -467,7 +467,7 @@
                     <div class="setting-item" id="embeddingSetting">
                         <label for="embeddingModelSelect"><strong>埋め込みモデル:</strong></label><br>
                         <select id="embeddingModelSelect" class="embedding-model-select" aria-label="埋め込みモデル選択">
-                           <option value="text-embedding-004" selected>text-embedding-004 (Gemini)</option>
+                        <option value="models/gemini-embedding-001" selected>gemini-embedding-001 (Gemini)</option>
                         </select>
                         <div class="sync-status" id="embeddingSyncStatus">設定同期待機中...</div>
                     </div>
